updated index.html to include links to ordering.php and sequencing.php

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <a href="subtraction.php" />Subtraction</a>
 <a href="multiplication.php" />Multiplication</a>
 <a href="division.php" />Division</a>
+<a href="ordering.php" />Number Ordering</a>
+<a href="sequencing.php" />Number Sequencing</a>
 </body>
 </html>
