updated index.html to include a link to units.php

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <a href="division.php" />Division</a>
 <a href="ordering.php" />Number Ordering</a>
 <a href="sequencing.php" />Number Sequencing</a>
+<a href="units.php" />Unit Calculating</a>
 </body>
 </html>
