updated index.html to include a link to money.php

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <a href="ordering.php" />Number Ordering</a>
 <a href="sequencing.php" />Number Sequencing</a>
 <a href="units.php" />Unit Calculating</a>
+<a href="money.php" />Money Calculating</a>
 </body>
 </html>
