updated index.html to replace self-closing <a> tags

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 <body>
 <h1>Mathematical Functions in PHP</h1>
 <h2>Elementary Arithmetic</h2>
-<a href="addition.php" />Addition</a>
-<a href="subtraction.php" />Subtraction</a>
-<a href="multiplication.php" />Multiplication</a>
-<a href="division.php" />Division</a>
-<a href="ordering.php" />Number Ordering</a>
-<a href="sequencing.php" />Number Sequencing</a>
-<a href="units.php" />Unit Calculating</a>
-<a href="money.php" />Money Calculating</a>
-<a href="length.php" />Length Calculating</a>
-<a href="weight.php" />Weight Calculating</a>
+<a href="addition.php">Addition</a>
+<a href="subtraction.php">Subtraction</a>
+<a href="multiplication.php">Multiplication</a>
+<a href="division.php">Division</a>
+<a href="ordering.php">Number Ordering</a>
+<a href="sequencing.php">Number Sequencing</a>
+<a href="units.php">Unit Calculating</a>
+<a href="money.php">Money Calculating</a>
+<a href="length.php">Length Calculating</a>
+<a href="weight.php">Weight Calculating</a>
 </body>
 </html>
