added link to time.php

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <a href="money.php">Money Calculating</a>
 <a href="length.php">Length Calculating</a>
 <a href="weight.php">Weight Calculating</a>
+<a href="time.php">Time Calculating</a>
 </body>
 </html>
