added link to shapes.php

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <a href="length.php">Length Calculating</a>
 <a href="weight.php">Weight Calculating</a>
 <a href="time.php">Time Calculating</a>
+<a href="shapes.php">Shapes</a>
 </body>
 </html>
