added link to organising.php

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <a href="weight.php">Weight Calculating</a>
 <a href="time.php">Time Calculating</a>
 <a href="shapes.php">Shapes</a>
+<a href="organising.php">Data Organising</a>
 </body>
 </html>
