added a header for the Other section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <a href="time.php">Time Calculating</a>
 <a href="shapes.php">Shapes</a>
 <a href="organising.php">Data Organising</a>
+<h2>Other</h2>
 </body>
 </html>
