--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 <a href="shapes.php">Shapes</a>
 <a href="organising.php">Data Organising</a>
 <h2>Other</h2>
+<a href="decimal_percentage.php">Decimal/Percentage Converting</a>
 </body>
 </html>
