--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 <a href="organising.php">Data Organising</a>
 <h2>Other</h2>
 <a href="decimal_percentage.php">Decimal/Percentage Converting</a>
+<a href="percentage_decimal.php">Percentage/Decimal Converting</a>
 </body>
 </html>
